src/main/java/gen/robotControlParser.java
// Generated from E:/Users/Maciej/Studia/TKOM/RobotControl5\robotControl.g4 by ANTLR 4.7
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class robotControlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOT=1, IF=2, ELSE=3, WHILE=4, LEFT=5, RIGHT=6, FRONT=7, BACK=8, LCBRACKET=9, 
		RCBRACKET=10, LNBRACKET=11, RNBRACKET=12, LSBRACKET=13, RSBRACKET=14, 
		OPPLUS=15, OPMINUS=16, OPMUL=17, OPDIV=18, OPGREATER=19, OPSMALLER=20, 
		OPEQUAL=21, OPASSIGN=22, SEMICOLON=23, VARINT=24, VARROBOT=25, VARSTRING=26, 
		VARDOUBLE=27, SETSPEED=28, INT=29, VARNAME=30, STRING=31, DOUBLE=32, WHITESPACE=33, 
		COMMENT=34;
	public static final int
		RULE_script = 0, RULE_ifStment = 1, RULE_whileStment = 2, RULE_stment = 3, 
		RULE_robotStmentDouble = 4, RULE_robotStmentInt = 5, RULE_mathExpr = 6, 
		RULE_mathExprInt = 7, RULE_mathExprDouble = 8, RULE_expr = 9, RULE_declaration = 10, 
		RULE_declarationInt = 11, RULE_declarationString = 12, RULE_declarationDouble = 13, 
		RULE_assignement = 14, RULE_assignementInt = 15, RULE_assignementString = 16, 
		RULE_initiailizeRobot = 17, RULE_assignementDouble = 18, RULE_relOp = 19, 
		RULE_varType = 20;
	public static final String[] ruleNames = {
		"script", "ifStment", "whileStment", "stment", "robotStmentDouble", "robotStmentInt", 
		"mathExpr", "mathExprInt", "mathExprDouble", "expr", "declaration", "declarationInt", 
		"declarationString", "declarationDouble", "assignement", "assignementInt", 
		"assignementString", "initiailizeRobot", "assignementDouble", "relOp", 
		"varType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'if'", "'else'", "'while'", "'left'", "'right'", "'front'", 
		"'back'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'+'", "'-'", "'*'", 
		"'/'", "'>'", "'<'", "'=='", "'='", "';'", "'int'", "'robot'", "'string'", 
		"'double'", "'setSpeed'", null, null, null, null, "' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DOT", "IF", "ELSE", "WHILE", "LEFT", "RIGHT", "FRONT", "BACK", 
		"LCBRACKET", "RCBRACKET", "LNBRACKET", "RNBRACKET", "LSBRACKET", "RSBRACKET", 
		"OPPLUS", "OPMINUS", "OPMUL", "OPDIV", "OPGREATER", "OPSMALLER", "OPEQUAL", 
		"OPASSIGN", "SEMICOLON", "VARINT", "VARROBOT", "VARSTRING", "VARDOUBLE", 
		"SETSPEED", "INT", "VARNAME", "STRING", "DOUBLE", "WHITESPACE", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "robotControl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public robotControlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public List<StmentContext> stment() {
			return getRuleContexts(StmentContext.class);
		}
		public StmentContext stment(int i) {
			return getRuleContext(StmentContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotControlVisitor ) return ((robotControlVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << VARINT) | (1L << VARROBOT) | (1L << VARSTRING) | (1L << VARDOUBLE) | (1L << VARNAME))) != 0)) {
				{
				{
				setState(42);
				stment();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStmentContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(robotControlParser.IF, 0); }
		public TerminalNode LNBRACKET() { return getToken(robotControlParser.LNBRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RNBRACKET() { return getToken(robotControlParser.RNBRACKET, 0); }
		public List<TerminalNode> LCBRACKET() { return getTokens(robotControlParser.LCBRACKET); }
		public TerminalNode LCBRACKET(int i) {
			return getToken(robotControlParser.LCBRACKET, i);
		}
		public List<TerminalNode> RCBRACKET() { return getTokens(robotControlParser.RCBRACKET); }
		public TerminalNode RCBRACKET(int i) {
			return getToken(robotControlParser.RCBRACKET, i);
		}
		public List<StmentContext> stment() {
			return getRuleContexts(StmentContext.class);
		}
		public StmentContext stment(int i) {
			return getRuleContext(StmentContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(robotControlParser.ELSE, 0); }
		public IfStmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).enterIfStment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).exitIfStment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotControlVisitor ) return ((robotControlVisitor<? extends T>)visitor).visitIfStment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStmentContext ifStment() throws RecognitionException {
		IfStmentContext _localctx = new IfStmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ifStment);
		int _la;
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(48);
				match(IF);
				setState(49);
				match(LNBRACKET);
				setState(50);
				expr();
				setState(51);
				match(RNBRACKET);
				setState(52);
				match(LCBRACKET);
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << VARINT) | (1L << VARROBOT) | (1L << VARSTRING) | (1L << VARDOUBLE) | (1L << VARNAME))) != 0)) {
					{
					{
					setState(53);
					stment();
					}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(59);
				match(RCBRACKET);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(61);
				match(IF);
				setState(62);
				match(LNBRACKET);
				setState(63);
				expr();
				setState(64);
				match(RNBRACKET);
				setState(65);
				match(LCBRACKET);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << VARINT) | (1L << VARROBOT) | (1L << VARSTRING) | (1L << VARDOUBLE) | (1L << VARNAME))) != 0)) {
					{
					{
					setState(66);
					stment();
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				match(RCBRACKET);
				setState(73);
				match(ELSE);
				setState(74);
				match(LCBRACKET);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << VARINT) | (1L << VARROBOT) | (1L << VARSTRING) | (1L << VARDOUBLE) | (1L << VARNAME))) != 0)) {
					{
					{
					setState(75);
					stment();
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(RCBRACKET);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStmentContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(robotControlParser.WHILE, 0); }
		public TerminalNode LNBRACKET() { return getToken(robotControlParser.LNBRACKET, 0); }
		public TerminalNode RNBRACKET() { return getToken(robotControlParser.RNBRACKET, 0); }
		public TerminalNode LCBRACKET() { return getToken(robotControlParser.LCBRACKET, 0); }
		public TerminalNode RCBRACKET() { return getToken(robotControlParser.RCBRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MathExprContext mathExpr() {
			return getRuleContext(MathExprContext.class,0);
		}
		public List<StmentContext> stment() {
			return getRuleContexts(StmentContext.class);
		}
		public StmentContext stment(int i) {
			return getRuleContext(StmentContext.class,i);
		}
		public WhileStmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).enterWhileStment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).exitWhileStment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotControlVisitor ) return ((robotControlVisitor<? extends T>)visitor).visitWhileStment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStmentContext whileStment() throws RecognitionException {
		WhileStmentContext _localctx = new WhileStmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_whileStment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(WHILE);
			setState(86);
			match(LNBRACKET);
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(87);
				expr();
				}
				break;
			case 2:
				{
				setState(88);
				mathExpr();
				}
				break;
			}
			setState(91);
			match(RNBRACKET);
			setState(92);
			match(LCBRACKET);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << VARINT) | (1L << VARROBOT) | (1L << VARSTRING) | (1L << VARDOUBLE) | (1L << VARNAME))) != 0)) {
				{
				{
				setState(93);
				stment();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(RCBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmentContext extends ParserRuleContext {
		public IfStmentContext ifStment() {
			return getRuleContext(IfStmentContext.class,0);
		}
		public WhileStmentContext whileStment() {
			return getRuleContext(WhileStmentContext.class,0);
		}
		public RobotStmentDoubleContext robotStmentDouble() {
			return getRuleContext(RobotStmentDoubleContext.class,0);
		}
		public RobotStmentIntContext robotStmentInt() {
			return getRuleContext(RobotStmentIntContext.class,0);
		}
		public AssignementContext assignement() {
			return getRuleContext(AssignementContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public InitiailizeRobotContext initiailizeRobot() {
			return getRuleContext(InitiailizeRobotContext.class,0);
		}
		public StmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).enterStment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).exitStment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotControlVisitor ) return ((robotControlVisitor<? extends T>)visitor).visitStment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmentContext stment() throws RecognitionException {
		StmentContext _localctx = new StmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stment);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				ifStment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				whileStment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				robotStmentDouble();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				robotStmentInt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(105);
				assignement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(106);
				declaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(107);
				initiailizeRobot();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RobotStmentDoubleContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(robotControlParser.VARNAME, 0); }
		public TerminalNode DOT() { return getToken(robotControlParser.DOT, 0); }
		public TerminalNode LNBRACKET() { return getToken(robotControlParser.LNBRACKET, 0); }
		public TerminalNode DOUBLE() { return getToken(robotControlParser.DOUBLE, 0); }
		public TerminalNode RNBRACKET() { return getToken(robotControlParser.RNBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(robotControlParser.SEMICOLON, 0); }
		public TerminalNode LEFT() { return getToken(robotControlParser.LEFT, 0); }
		public TerminalNode RIGHT() { return getToken(robotControlParser.RIGHT, 0); }
		public TerminalNode FRONT() { return getToken(robotControlParser.FRONT, 0); }
		public TerminalNode BACK() { return getToken(robotControlParser.BACK, 0); }
		public RobotStmentDoubleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_robotStmentDouble; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).enterRobotStmentDouble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).exitRobotStmentDouble(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotControlVisitor ) return ((robotControlVisitor<? extends T>)visitor).visitRobotStmentDouble(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RobotStmentDoubleContext robotStmentDouble() throws RecognitionException {
		RobotStmentDoubleContext _localctx = new RobotStmentDoubleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_robotStmentDouble);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(VARNAME);
			setState(111);
			match(DOT);
			setState(112);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LEFT) | (1L << RIGHT) | (1L << FRONT) | (1L << BACK))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(113);
			match(LNBRACKET);
			setState(114);
			match(DOUBLE);
			setState(115);
			match(RNBRACKET);
			setState(116);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RobotStmentIntContext extends ParserRuleContext {
		public List<TerminalNode> VARNAME() { return getTokens(robotControlParser.VARNAME); }
		public TerminalNode VARNAME(int i) {
			return getToken(robotControlParser.VARNAME, i);
		}
		public TerminalNode DOT() { return getToken(robotControlParser.DOT, 0); }
		public TerminalNode SETSPEED() { return getToken(robotControlParser.SETSPEED, 0); }
		public TerminalNode LNBRACKET() { return getToken(robotControlParser.LNBRACKET, 0); }
		public TerminalNode RNBRACKET() { return getToken(robotControlParser.RNBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(robotControlParser.SEMICOLON, 0); }
		public MathExprContext mathExpr() {
			return getRuleContext(MathExprContext.class,0);
		}
		public RobotStmentIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_robotStmentInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).enterRobotStmentInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).exitRobotStmentInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotControlVisitor ) return ((robotControlVisitor<? extends T>)visitor).visitRobotStmentInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RobotStmentIntContext robotStmentInt() throws RecognitionException {
		RobotStmentIntContext _localctx = new RobotStmentIntContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_robotStmentInt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(VARNAME);
			setState(119);
			match(DOT);
			setState(120);
			match(SETSPEED);
			setState(121);
			match(LNBRACKET);
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(122);
				mathExpr();
				}
				break;
			case 2:
				{
				setState(123);
				match(VARNAME);
				}
				break;
			}
			setState(126);
			match(RNBRACKET);
			setState(127);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathExprContext extends ParserRuleContext {
		public MathExprDoubleContext mathExprDouble() {
			return getRuleContext(MathExprDoubleContext.class,0);
		}
		public MathExprIntContext mathExprInt() {
			return getRuleContext(MathExprIntContext.class,0);
		}
		public MathExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).enterMathExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).exitMathExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotControlVisitor ) return ((robotControlVisitor<? extends T>)visitor).visitMathExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathExprContext mathExpr() throws RecognitionException {
		MathExprContext _localctx = new MathExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mathExpr);
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				mathExprDouble();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				mathExprInt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathExprIntContext extends ParserRuleContext {
		public List<TerminalNode> VARNAME() { return getTokens(robotControlParser.VARNAME); }
		public TerminalNode VARNAME(int i) {
			return getToken(robotControlParser.VARNAME, i);
		}
		public List<TerminalNode> INT() { return getTokens(robotControlParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(robotControlParser.INT, i);
		}
		public List<TerminalNode> OPPLUS() { return getTokens(robotControlParser.OPPLUS); }
		public TerminalNode OPPLUS(int i) {
			return getToken(robotControlParser.OPPLUS, i);
		}
		public List<TerminalNode> OPMINUS() { return getTokens(robotControlParser.OPMINUS); }
		public TerminalNode OPMINUS(int i) {
			return getToken(robotControlParser.OPMINUS, i);
		}
		public List<TerminalNode> OPMUL() { return getTokens(robotControlParser.OPMUL); }
		public TerminalNode OPMUL(int i) {
			return getToken(robotControlParser.OPMUL, i);
		}
		public List<TerminalNode> OPDIV() { return getTokens(robotControlParser.OPDIV); }
		public TerminalNode OPDIV(int i) {
			return getToken(robotControlParser.OPDIV, i);
		}
		public MathExprIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathExprInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).enterMathExprInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof robotControlListener ) ((robotControlListener)listener).exitMathExprInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotControlVisitor ) return ((robotControlVisitor<? extends T>)visitor).visitMathExprInt(this);
			else return visitor.visitChildren(this);
		}
	}
